get reservations endpoint fixed and reservation repo fixed
