# api/docs/swagger.json
@@ -193,8 +193,8 @@
             }
         },
         "/reservation/": {
-            "get": {
-                "description": "Geting all reservation",
+            "post": {
+                "description": "Adding new reservation",
                 "consumes": [
                     "application/json"
                 ],
@@ -204,7 +204,18 @@
                 "tags": [
                     "Reservation"
                 ],
-                "summary": "Get all reservation",
+                "summary": "Add new reservation",
+                "parameters": [
+                    {
+                        "description": "Creating new reservation",
+                        "name": "AddReservationRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/reservation_service.AddReservationRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -241,9 +252,11 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/reservation/check": {
             "post": {
-                "description": "Adding new reservation",
+                "description": "Can check Reservation availability via ids",
                 "consumes": [
                     "application/json"
                 ],
@@ -253,15 +266,77 @@
                 "tags": [
                     "Reservation"
                 ],
-                "summary": "Add new reservation",
+                "summary": "Checking Reservation Availability",
                 "parameters": [
                     {
-                        "description": "Creating new reservation",
-                        "name": "AddReservationRequest",
+                        "description": "Check Reservation",
+                        "name": "check",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/reservation_service.AddReservationRequest"
+                            "$ref": "#/definitions/models.CheckReservationFilter"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/reservation/getall": {
+            "post": {
+                "description": "Geting all reservation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reservation"
+                ],
+                "summary": "Get all reservation",
+                "parameters": [
+                    {
+                        "description": "Get all reservation",
+                        "name": "GetReservationsRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/reservation_service.GetReservationsRequest"
                         }
                     }
                 ],
@@ -638,6 +713,17 @@
                 }
             }
         },
+        "models.CheckReservationFilter": {
+            "type": "object",
+            "properties": {
+                "reservation_id string": {
+                    "type": "string"
+                },
+                "user_id string": {
+                    "type": "string"
+                }
+            }
+        },
         "reservation_service.AddReservationRequest": {
             "type": "object",
             "properties": {
@@ -668,6 +754,20 @@
                     "type": "string"
                 },
                 "phone_number": {
+                    "type": "string"
+                }
+            }
+        },
+        "reservation_service.GetReservationsRequest": {
+            "type": "object",
+            "properties": {
+                "restaurant_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
