# api/handlers/main_handler.go
@@ -73,7 +73,7 @@ type ReservationHandler interface {
 // @Tags Reservation
 // @Accept  json
 // @Produce  json
-// @Param check body models.CheckReservation true "Check Reservation"
+// @Param check body models.CheckReservationFilter true "Check Reservation"
 // @Success 200 {object} map[string]interface{}
 // @Failure 400 {object} map[string]string
 // @Failure 401 {object} map[string]string
