# api/handlers/reservation.go
@@ -46,9 +46,14 @@ func (r *reservationHandlerImpl) CreateReservation(ctx *gin.Context) {
 // @Failure 400 {object} map[string]string
 // @Failure 401 {object} map[string]string
 // @Failure 500 {object} map[string]string
-// @Router /reservation/ [get]
+// @Router /reservation/getall [post]
 func (r *reservationHandlerImpl) GetReservations(ctx *gin.Context) {
 	getResReq := rese.GetReservationsRequest{}
+
+	if err := ctx.ShouldBindJSON(&getResReq); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request format: " + err.Error()})
+		return
+	}
 
 	getResRes, err := r.reservationService.GetReservations(context.TODO(), &getResReq)
 	if err != nil {
